# algorithm-and-data-structure-siminar

./: README.md
Task_Prac2/: CMakeLists.txt  Lineup.cpp  Template20210521.cpp  Volume20210522.cpp  safeVist2021521.cpp  zsmall20210522.cpp
Task_Prac2/test2/: exchange.cpp  safeArray.cpp
Task_Prac2/test3/: copy1.cpp  outp.cpp  sort1.cpp
Task_Prac2/zhachot/: 10.cpp  21.cpp  38.cpp  45.cpp
