cmake_minimum_required(VERSION 3.19)
project(Task_Prac2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Task_Prac2 Lineup.cpp Template20210521.cpp safeVist2021521.cpp Volume20210522.cpp zsmall20210522.cpp test2/safeArray.cpp test2/exchange.cpp test3/sort1.cpp test3/copy1.cpp test3/outp.cpp zhachot/10.cpp zhachot/21.cpp zhachot/38.cpp zhachot/45.cpp)